Working About Menu, Added Problems, Adjusted spacing, Fixed Page layout setup, added classes.