@@ -17,14 +17,15 @@ classDiagram
     GUI_NotesWindow -- GUI_ECTab
     GUI_NotesWindow -- GUI_EDTab
     GUI_NotesWindow -- GUI_AnalysisTab
+    GUI_JGAAPAboutWindow -- GUI_MainWindow
 
     class GUI_CanTab{
+        -GUI_NotesWindow notesBox$
         -VBox box
         +GUI_CanTab()
         -build_pane()
         -init_rowOne() HBox
-        -init_rowTwo() HBox
-        -init_rowThree() VBox
+        -init_rowTwo() VBox
         -init_bottomButtons() HBox
         -init_ListBoxLeft() ListView~String~
         -init_ListBoxRight() ListView~String~
@@ -33,6 +34,7 @@ classDiagram
         +getPane() VBox
     }
     class GUI_DocTab{
+        -GUI_NotesWindow notesBox$
         -VBox box
         +GUI_DocTab()
         -build_tab()
@@ -48,11 +50,12 @@ classDiagram
         +getPane() VBox
     }
     class GUI_ECTab{
+        -GUI_NotesWindow notesBox$
         -VBox box
         +GUI_ECTab()
         -build_pane()
-        -init_rowOne() VBox
-        -init_rowThree() HBox
+        -init_rowOne() HBox
+        -init_rowTwo() VBox
         -init_bottomButtons() HBox 
         -init_ListBoxLeft() ListView~String~
         -init_ListBoxRight() ListView~String~
@@ -61,11 +64,12 @@ classDiagram
         +getPane() VBox
     }
     class GUI_EDTab{
+        -GUI_NotesWindow notesBox$
         -VBox box
         +GUI_EDTab()
         -build_pane() HBox
-        -init_rowOne() VBox
-        -init_rowThree() HBox
+        -init_rowOne() HBox
+        -init_rowTwo() VBox
         -init_bottomButtons() HBox
         -init_ListBoxLeft() ListView~String~
         -init_ListBoxRight() ListView~String~
@@ -88,11 +92,21 @@ classDiagram
         +getPane() List~MenuItem~
     }
     class GUI_AnalysisTab{
-        -VBox box
+        -VBox box;
+        -GUI_NotesWindow notesBox$
         +GUI_AnalysisTab()
+        -build_pane()
+        -init_rowOne() HBox
+        -init_rowTwo() HBox
+        -init_bottomButtons() HBox
+        -init_SelectedBox() ListView~String~
+        -init_AnalysisMethodBox() ListView~String~
+        -init_DistanceFunctionBox() ListView~String~
+        -init_rowOneButtons() VBox
         +getPane() VBox
     }
     class GUI_ReviewTab{
+        -GUI_NotesWindow notesBox$
         -VBox box
         +GUI_ReviewTab()
         -build_pane()
@@ -105,11 +119,24 @@ classDiagram
         +getPane() VBox
     }
     class GUI_NotesWindow{
-        -Scene scene
+        -Stage stage$
+        -Button notes$
+        -TextArea area$
+        -String text$
         +GUI_NotesWindow()
-        -build_scene
+        -build_stage()
         -init_bottomButtons() HBox
-        +getScene() Scene
+        +getButton() Button
+        +getNotes () String
+        +show()
+        +hide()
+        +close()
+    }
+    class GUI_JGAAPAboutWindow{
+        -Stage stage$
+        +GUI_JGAAPAboutWindow()
+        -build_stage()
+        +show()
     }
 ```
 
@@ -118,3 +145,7 @@ classDiagram
 [JavaFX version 21](https://openjfx.io/)
 
 [Java version 21](https://www.oracle.com/java/technologies/downloads/#java21)
+
+## Launching
+
+For the time being please launch via commandline or a debugger. If using a commandline please use the following: `java --module-path=<JavaFX_SDK_PATH>/lib --add-modules=javafx.controls,javafx.fxml,javafx.graphics,javafx.base,javafx.swing -jar <path_to-jar>.jar`
